Switched logo and dark mode icon

--- a/styles/header.css
+++ b/styles/header.css
@@ -44,6 +44,9 @@
     }
 
     #dark-mode-toggle .cs-sun {
+        /*padding-right: 5px;*/
+        /*padding-left: 5px;*/
+
         opacity: 0;
         z-index: 1;
         transform: translate(-50%, 100%);
@@ -90,16 +93,16 @@
     }
 
     #cs-navigation {
-        width: 94%;
+        width: 100%;
         max-width: 80rem;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
         /* 12px - 24px */
         padding: clamp(0.75rem, 2vw, 1.5rem);
         /* 12px - 24px */
-        border-radius: clamp(0.75rem, 2vw, 1.5rem);
+        /*border-radius: clamp(0.75rem, 2vw, 1.5rem);*/
         position: fixed;
-        top: 2rem;
+        /*top: 2rem;*/
         left: 50%;
         z-index: 10000;
         transform: translateX(-50%);
@@ -543,10 +546,13 @@
         background-color: #fff;
         box-shadow: inset rgba(149, 157, 165, 0.1) 0px 8px 10px;
         opacity: 0;
-        border-bottom: 5px solid var(--primary);
-        border-radius: 0 0 1.5rem 1.5rem;
+        border-bottom: 1px solid var(--primary);
         visibility: hidden;
-        /* if you have 8 or more links in your dropdown nav, uncomment the columns property to make the list into 2 even columns. Change it to 3 or 4 if you need extra columns. Then remove the transition delays on the cs-drop-li so they don't have weird scattered animations */
+        /* if you have 8 or more links in your dropdown nav,
+        uncomment the columns property to make the list into 2 even columns.
+        Change it to 3 or 4 if you need extra columns.
+        Then remove the transition delays on the cs-drop-li
+        so they don't have weird scattered animations */
         position: absolute;
         top: 100%;
         z-index: -100;
@@ -653,8 +659,9 @@
     }
 
     #cs-navigation {
-        width: 94%;
-        max-width: 90rem;
+        /*width: 94%;*/
+        width: 100%;
+        /*max-width: 90rem;*/
         height: 6rem;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
@@ -663,11 +670,12 @@
         background-color: #fff;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         /* 12px - 24px */
-        border-radius: clamp(0.75rem, 2vw, 1.5rem);
+        /*border-radius: clamp(0.75rem, 2vw, 1.5rem);*/
         display: flex;
         align-items: center;
         position: fixed;
-        top: 2rem;
+        /*top: 2rem;*/
+        /*left: 47%;*/
         left: 50%;
         z-index: 10000;
         transform: translateX(-50%);
@@ -811,7 +819,7 @@
     }
 
     #cs-navigation .cs-li-link {
-        font-size: 1rem;
+        font-size: 0.95rem;
         line-height: 1.5em;
         text-decoration: none;
         margin: 0;
