--- a/styles/dark.css
+++ b/styles/dark.css
@@ -53,10 +53,12 @@
         opacity: 1;
     }
 
+
     body.dark-mode #dark-mode-toggle .cs-moon {
         transform: translate(-50%, -150%);
         opacity: 0;
     }
+
 
     #dark-mode-toggle {
         display: block;
@@ -98,6 +100,7 @@
         transition: transform 0.3s,
         opacity 0.3s;
     }
+
 }
 
 /* Desktop */
@@ -107,7 +110,7 @@
         top: auto;
         right: auto;
         transform: none;
-        margin-left: 1.875rem;
+        /*margin-left: 1.875rem;*/
         margin-bottom: 0rem;
     }
 
