--- a/styles/header.css
+++ b/styles/header.css
@@ -27,6 +27,7 @@
         overflow: hidden;
     }
 
+
     #dark-mode-toggle img,
     #dark-mode-toggle svg {
         width: 1.25rem;
@@ -114,11 +115,11 @@
         content: "";
         width: 100%;
         height: 100%;
-        background: #fff;
+        background: #fff3f3;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         opacity: 1;
         /* 12px - 24px */
-        border-radius: clamp(0.75rem, 2vw, 1.5rem);
+        /*border-radius: clamp(0.75rem, 2vw, 1.5rem);*/
         display: block;
         position: absolute;
         top: 0;
@@ -178,9 +179,10 @@
         width: 3.5rem;
         height: 3.5rem;
         margin: 0 0 0 auto;
-        background-color: #1a1a1a;
+        background-color: #514343;
         border: none;
-        border-radius: 0.25rem;
+        /*border-radius: 0.25rem;*/
+        border-radius: 1rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -440,6 +442,10 @@
     body.dark-mode #cs-navigation .cs-li-link {
         color: var(--bodyTextColorWhite);
     }
+
+    body.dark-mode .cs-shopping-bag {
+        filter: invert(1);
+    }
 }
 
 /*-- -------------------------- -->
@@ -633,6 +639,11 @@
     #cs-navigation .cs-li-link.cs-drop-link:before {
         display: none;
     }
+
+    #cs-navigation .cs-shopping-bag {
+        width: 1.5rem;
+        margin-right: 5px
+    }
 }
 
 /* Dark Mode - Desktop */
@@ -667,7 +678,7 @@
         box-sizing: border-box;
         /* 12px - 24px */
         padding: clamp(0.75rem, 2vw, 1.5rem) 0;
-        background-color: #fff;
+        background-color: #fff3f3;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         /* 12px - 24px */
         /*border-radius: clamp(0.75rem, 2vw, 1.5rem);*/
@@ -819,7 +830,7 @@
     }
 
     #cs-navigation .cs-li-link {
-        font-size: 0.95rem;
+        font-size: 1.2rem;
         line-height: 1.5em;
         text-decoration: none;
         margin: 0;
@@ -912,6 +923,10 @@
 
     body.dark-mode #cs-navigation .cs-li-link:hover {
         color: var(--secondary);
+    }
+
+    body.dark-mode .cs-shopping-bag {
+        filter: invert(1);
     }
 }
                                 
