--- a/styles/hero.css
+++ b/styles/hero.css
@@ -20,7 +20,7 @@
         height: 100%;
         display: block;
         position: absolute;
-        top: 0;
+        top: 100px;
         left: 0;
         z-index: -2;
     }
