--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,6 +7,7 @@
     #cs-footer-274 {
         padding: var(--sectionPadding);
         /* Navigation Links */
+        box-shadow: 0px 0px red, 0em 0 .4em gray;
     }
 
     #cs-footer-274 .cs-container {
