--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,7 +7,8 @@
     #cs-footer-274 {
         padding: var(--sectionPadding);
         /* Navigation Links */
-        box-shadow: 0px 0px red, 0em 0 .4em gray;
+        background-color: #fff3f3;
+        box-shadow: rgba(149, 157, 165, 0.2) 5px 0 24px;
     }
 
     #cs-footer-274 .cs-container {
