--- a/styles/dark.css
+++ b/styles/dark.css
@@ -25,7 +25,8 @@
     body.dark-mode h6,
     body.dark-mode .cs-title,
     body.dark-mode .cs-text,
-    body.dark-mode .cs-li {
+    body.dark-mode .cs-li,
+    body.dark-mode .cs-topper {
         color: var(--bodyTextColorWhite);
     }
 
