--- a/styles/hero.css
+++ b/styles/hero.css
@@ -51,9 +51,10 @@
     }
 
     #hero-219 .cs-container {
-        width: 100%;
-        max-width: 80rem;
-        margin: auto;
+        /* width: 100%; */
+        max-width: 40rem;
+        /* margin: auto; */
+        margin-left: 10rem;
     }
 
     #hero-219 .cs-title {
@@ -91,7 +92,7 @@
         margin: auto;
         color: #fff;
         padding: 0 1.5rem;
-        background-color: var(--primary);
+        background-color: #f15a24;
         border-radius: 0.25rem;
         display: inline-block;
         position: relative;
@@ -104,7 +105,7 @@
         display: block;
         height: 100%;
         width: 0%;
-        background: #000;
+        background: var(--primary);
         opacity: 1;
         top: 0;
         left: 0;
