--- a/styles/sbsr_hero.css
+++ b/styles/sbsr_hero.css
@@ -58,7 +58,7 @@
         color: #fff;
         min-width: 9.375rem;
         padding: 0 1.5rem;
-        background-color: var(--primary);
+        background-color: #f15a24;
         border-radius: 0.25rem;
         display: inline-block;
         position: relative;
@@ -72,7 +72,7 @@
         position: absolute;
         height: 100%;
         width: 0%;
-        background: #000;
+        background: var(--primary);
         opacity: 1;
         top: 0;
         left: 0;
